# mini-erp-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  inv-edit.md  opencode.jsonc  plan.md  prd-dioxus-migration.md
.gemini/: settings.json  settings.json.bak
.gemini/hooks/: crg-session-start.sh  crg-update.sh
.mimocode/: .cron-lock
.mimocode/plans/: 1783963712384-cosmic-river.md
.qoder/: mcp.json
assets/: main.css
openspec/: config.yaml
openspec/changes/archive/2026-06-28-fix-invoice-detail-page/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-fix-invoice-detail-actions/: design.md  proposal.md
openspec/changes/archive/2026-06-30-fix-role-user-count/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-invoice-creation-payment/: design.md  tasks.md
openspec/changes/archive/2026-07-01-fix-broken-buttons/: design.md  proposal.md
openspec/changes/archive/2026-07-15-fix-accounting-gaps/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-16-collapsible-sidebar/: tasks.md
openspec/changes/archive/2026-07-17-render-sales-detail-pages/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-19-audit-fix-1-transaction-atomicity/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-19-audit-fix-2-invoice-correctness/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-19-audit-fix-3-payment-reversal/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/collapsible-sidebar/: design.md  proposal.md
openspec/changes/fix-broken-buttons/: tasks.md
openspec/changes/fix-invoice-detail-actions/: tasks.md
openspec/changes/invoice-creation-payment/: proposal.md  tasks.md
openspec/changes/production-record-flow/: proposal.md  tasks.md
openspec/specs/journal-entry-system/: spec.md
openspec/specs/sales-detail-views/: spec.md
src/: api.rs  auth.rs  i18n.rs  lib.rs  main.rs  models.rs  money.rs  server_main.rs  utils.rs
src/calculations/: customer.rs  formatting.rs  invoice.rs  mod.rs  quotation.rs  stock.rs
src/components/: charts.rs  mod.rs  rbac.rs  shortcuts.rs
src/components/common/: breadcrumb.rs  button.rs  compact_card.rs  date_range_picker.rs  dropdown_menu.rs  error_boundary.rs  floating_action_button.rs  form_input.rs  mod.rs  modal.rs  page_loader.rs  searchable_select.rs  shortcut_bar.rs  stat_card.rs  styles.rs  toast.rs  top_menu.rs
src/components/customer/: customer_header.rs  customer_ledger.rs  customer_overview.rs  customer_tabs.rs  mod.rs
src/components/dashboard/: dashboard_block.rs  dashboard_stats.rs  mod.rs
src/components/data_grid/: columns.rs  data_grid.rs  filter.rs  mod.rs  pagination.rs  renderers.rs  sort.rs  styles.rs  types.rs
src/components/inventory/: mod.rs  stock_adjustment_form.rs
src/components/invoice/: invoice_items_table.rs  invoice_payment_panel.rs  mod.rs
src/components/layout/: mod.rs  sidebar.rs
src/pages/: accounting_dashboard.rs  accounting_periods.rs  activity_log.rs  ar_aging.rs  bom_create.rs  bom_detail.rs  bom_edit.rs  bom_list.rs  chart_of_accounts.rs  custom_report_builder.rs  customer_create.rs  customer_detail.rs  customer_edit.rs  customer_list.rs  customer_statements.rs  dashboard.rs  dashboard_layouts.rs  demand_forecast.rs  direct_purchase_create.rs  direct_purchase_detail.rs  direct_purchase_list.rs  employee_create.rs  employee_detail.rs  employee_edit.rs  employee_list.rs  expense_category_list.rs  expense_create.rs  expense_list.rs  fifo_report.rs  financial_report.rs  forecast_accuracy.rs  forecast_model_config.rs  forecasts_dashboard.rs  goods_receipt_list.rs  integrations.rs  inventory_dashboard.rs  inventory_report.rs  invoice_create.rs  invoice_detail.rs  invoice_edit.rs  (+59 more)
src/server/: accounting_routes.rs  admin_routes.rs  auth_routes.rs  customer_routes.rs  dashboard_routes.rs  db.rs  forecast_routes.rs  inventory_routes.rs  invoice_routes.rs  manufacturing_routes.rs  mobile_routes.rs  mod.rs  payment_routes.rs  pos_routes.rs  purchase_routes.rs  report_routes.rs  routes.rs  sales_routes.rs
(+51 files in other folders)
