[package]
name = "mini-erp"
version = "0.1.0"
edition = "2021"
description = "MiniERP — Full-featured ERP system rebuilt in Dioxus (Rust) for cross-platform desktop, web, and mobile."
authors = ["MiniERP Team"]
license = "MIT"
repository = "https://github.com/minierp/mini-erp"

# ============================================================================
# [bin]
# Two binaries: frontend (Dioxus WASM) and server (native Axum)
# ============================================================================
[[bin]]
name = "mini-erp"
path = "src/main.rs"

# Server binary — only builds on native targets (not WASM)
# Build with: cargo build --bin mini-erp-server --features server
[[bin]]
name = "mini-erp-server"
path = "src/server_main.rs"
required-features = ["server"]

# Shared library so both binaries can use the same modules
[lib]
name = "mini_erp"
path = "src/lib.rs"

# ============================================================================
# [dependencies]
# Core Dioxus framework — compiles for WASM and native
# ============================================================================
[dependencies]
dioxus = { version = "0.7", features = ["router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
csv = "1.3"
rand = "0.8"

# Charts
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "all_series", "all_elements"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Validation
garde = "0.21"

# ============================================================================
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-only dependencies — NOT compiled for native targets
# ============================================================================
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage", "KeyboardEvent"] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"

# ============================================================================
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only dependencies (NOT compiled for WASM)
# Used by the server binary and desktop targets
# ============================================================================
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
once_cell = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"

# Database
rusqlite = { version = "0.36", features = ["bundled"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.17"

# ============================================================================
# [features]
# Platform-specific feature flags for conditional compilation
# ============================================================================
[features]
default = ["web"]

# Web target (WASM in browser)
web = ["dioxus/web"]

# Desktop target (native WebView, replaces Electron)
desktop = ["dioxus/desktop"]

# Mobile targets (iOS / Android)
mobile = ["dioxus/mobile"]

# Server binary (native Axum backend) — build with: cargo build --bin mini-erp-server --features server
server = []

# Chart support (always enabled now)
charts = []

# ============================================================================
# [profile.release]
# Optimize for small WASM binary size
# ============================================================================
[profile.release]
opt-level = "z"          # Aggressive size optimization
lto = true               # Link-time optimization
codegen-units = 1        # Single codegen unit for max optimization
strip = true             # Strip debug symbols
panic = "abort"          # Abort on panic (smaller binary, no unwind tables)
